--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,38 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	
+	<dependency>
+	    <groupId>org.springframework.boot</groupId>
+	    <artifactId>spring-security-test</artifactId>
+	    <version>3.0.5</version>
+	</dependency>
+	
+	<dependency>
+	    <groupId>org.springframework.boot</groupId>
+	    <artifactId>spring-boot-starter-security</artifactId>
+	    <scope>test</scope>
+	</dependency>
+
+	<dependency>
+	    <groupId>io.jsonwebtoken</groupId>
+	    <artifactId>jjwt-api</artifactId>
+	    <version>0.11.1</version>
+	</dependency>
+	
+	<dependency>
+	    <groupId>io.jsonwebtoken</groupId>
+	    <artifactId>jjwt-impl</artifactId>
+	    <version>0.11.1</version>
+	    <scope>runtime</scope>
+	</dependency>
+	
+	<dependency>
+	    <groupId>io.jsonwebtoken</groupId>
+	    <artifactId>jjwt-jackson</artifactId>
+	    <version>0.11.1</version>
+	    <scope>runtime</scope>
+	</dependency>
 
 	<build>
 		<plugins>
